# claude-code-inspector

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  main.js  style.css  utils.js
src/: cursor_db.rs  dashboard.rs  db.rs  functions.rs  intercept.rs  llm.rs  main.rs  mcp.rs  proxy.rs  routing.rs  session.rs  sse_tee.rs  supervisor.rs  supervisor_llm.rs  types.rs
src/assets/: dashboard.html
