[package]
name = "claude-code-hook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-code-hook"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1"
dirs-next = "2"
anyhow = "1"
include_dir = "0.7"
