[package]
name = "claude-code-hook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-code-hook"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1"
dirs-next = "2"
anyhow = "1"
include_dir = "0.7"
tree-sitter = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
# tree-sitter-solidity requires ABI v15, incompatible with tree-sitter 0.24 (v14)
# TODO: re-enable when tree-sitter 0.25+ is stable
